fix: fix image alignment

--- a/src/pages/ProductPage/components/DetailedProductSection.scss
+++ b/src/pages/ProductPage/components/DetailedProductSection.scss
@@ -233,6 +233,10 @@
   z-index: 0;
 }
 
+.swiper-wrapper {
+  align-items: center;
+}
+
 .swiper-slider {
   display: flex;
   align-items: center;
